fleet/keel/fleet/src/snapshots/fleet__console__tests__render_agent_160.snap
---
source: fleet/src/console.rs
expression: "snapshot(160, View::Agent)"
---
┌fleet console─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ 1 FLEET · running · blocked · cost │ 2 TASK · agents · lifecycle · verdicts │ 3 AGENT · brief · diff · verdict · receipts │ 4 LANES · role · state · ledger  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌AGENT codex [transcript] · ✓ Complete [transcript]────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│brief   implement the three views [transcript]                                                                                                                │
│diff    + ratatui console+ crossterm input [receipt]                                                                                                          │
│verdict PASS [receipt]                                                                                                                                        │
│receipts blake3:abc [receipt]                                                                                                                                 │
│task    task-001 [receipt]                                                                                                                                    │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit · ←/→ or tab views · ↑/↓ or j/k select · [source] is provenance
