fleet/keel/fleet/src/snapshots/fleet__console__tests__render_fleet_160.snap
---
source: fleet/src/console.rs
expression: "snapshot(160, View::Fleet)"
---
┌fleet console─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ 1 FLEET · running · blocked · cost │ 2 TASK · agents · lifecycle · verdicts │ 3 AGENT · brief · diff · verdict · receipts │ 4 LANES · role · state · ledger  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌FLEET · running 1/1 (100.0%) [derived] · blocked 0/1 (0.0%) [derived] · cost — (cost absent for task task-001)────────────────────────────────────────────────┐
│TASK                                            STATUS                                                  COST                                                  │
│task-001 [receipt]                              ▶ Running [receipt]                                     — (cost not measured)                                 │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit · ←/→ or tab views · ↑/↓ or j/k select · [source] is provenance
