fleet/keel/fleet/src/snapshots/fleet__console__tests__render_lanes_80.snap
---
source: fleet/src/console.rs
expression: "snapshot(80, View::Lanes)"
---
┌fleet console─────────────────────────────────────────────────────────────────┐
│ 1 FLEET · running · blocked · cost │ 2 TASK · agents · lifecycle · verdicts ││
└──────────────────────────────────────────────────────────────────────────────┘
┌LANES · 2 tracked─────────────────────────────────────────────────────────────┐
│LANE (ROLE)      STATE           AGENT                LEDGER REF              │
│builder (builder ▶ Running [rece codex [receipt]      seq=3 hash=blake3:aaaa00│
│verifier (verifi · Queued [recei claude [receipt]     seq=1 hash=blake3:bbbb00│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
q quit · ←/→ or tab views · ↑/↓ or j/k select · [source] is provenance
