fleet/keel/fleet/src/snapshots/fleet__console__tests__render_task_80.snap
---
source: fleet/src/console.rs
expression: "snapshot(80, View::Task)"
---
┌fleet console─────────────────────────────────────────────────────────────────┐
│ 1 FLEET · running · blocked · cost │ 2 TASK · agents · lifecycle · verdicts ││
└──────────────────────────────────────────────────────────────────────────────┘
brief: ship the operator console [receipt]


┌TASK task-001 [receipt] · ▶ Running [receipt]─────────────────────────────────┐
│AGENT                     LIFECYCLE                 VERDICT                   │
│codex [transcript]        ✓ Complete [transcript]   PASS [receipt]            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
q quit · ←/→ or tab views · ↑/↓ or j/k select · [source] is provenance
